fix: add z-index

--- a/src/styles/OnSiteSearch.css
+++ b/src/styles/OnSiteSearch.css
@@ -10,6 +10,7 @@
 
 .ais-Panel {
   position: absolute;
+  z-index: 1;
   top: 0;
   right: 0;
   width: 500px;
